--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Test/EuCA.Pdf.Test.csproj
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Test/EuCA.Pdf.Test.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EuCA.Pdf\EuCA.Pdf.csproj">
+      <Project>{c3aaa1a1-6f4f-426c-87bb-55ec066d552b}</Project>
+      <Name>EuCA.Pdf</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
