--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf/EuCA.Pdf.csproj
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf/EuCA.Pdf.csproj
@@ -31,8 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EO.Pdf">
+      <HintPath>..\packages\EO.Pdf.5.0.89\lib\EO.Pdf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -40,8 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HtmlToPdfConverter.cs" />
-    <Compile Include="HtmlToPdfConverterOption.cs" />
+    <Compile Include="HtmlToPdfConverterOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
