Removing of comments in pwcdisplays.js and modifications to toc.xsl to add the "IMAGE" attribute value in the right place.

--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Web.config
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Web.config
@@ -14,4 +14,12 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="EO.Pdf" publicKeyToken="e92353a6bf73fffc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.18.2" newVersion="6.0.18.2" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
