--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf/packages.config
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EO.Pdf" version="5.0.89" targetFramework="net35" />
+  <package id="EO.Pdf" version="6.0.20" targetFramework="net35-Client" />
 </packages>
