DBE - UI + Business

--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/App.config
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/App.config
@@ -1,6 +1,50 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+  </configSections>
+  <appSettings>
+    <add key="pwc_xsl_bil" value="xsl" />
+    <add key="pwc_lib_bil" value="Lib_BIL" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="lib;lib/net;" />
+    </assemblyBinding>
+  </runtime>
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="log\log.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Composite" />
+      <maximumFileSize value="1MB" />
+      <maxSizeRollBackups value="10" />
+      <staticLogFileName value="true" />
+      <datePattern value="_yyyy_MM_dd'.log'" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{yyyy/MM/dd - HH:mm:ss,fff} - %-5level - %logger - %message %exception%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="INFO" />
+      <!-- ALL or INFO -->
+      <appender-ref ref="RollingFileAppender" />
+    </root>
+  </log4net>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
