--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf/EuCA.Pdf.csproj
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf/EuCA.Pdf.csproj
@@ -64,7 +64,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <LangVersion>3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
