Added automated processing of languages

--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.CLI/App.config
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.CLI/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="pwc_xsl_bil" value="xsl" />
+    <add key="pwc_lib_bil" value="Lib_BIL" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
