Changed the way the set ids retrieve the src-doc-path parameter. Updated the app to use a local work folder.

--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/App.config
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/App.config
@@ -30,7 +30,7 @@
       </layout>
     </appender>
     <root>
-      <level value="INFO" />
+      <level value="ALL" />
       <!-- ALL or INFO -->
       <appender-ref ref="RollingFileAppender" />
     </root>
