--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub/EuCA.Pwc.Pub.csproj
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub/EuCA.Pwc.Pub.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProcessParameters.cs" />
+    <Compile Include="ProgressStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicationProcess.cs" />
   </ItemGroup>
