- Added comments. - Refactoring of some class names. - Added a nuget reference to wpffolderbrowser instead of using the dll.

--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/EuCA.Pwc.Pub.UI.csproj
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/EuCA.Pwc.Pub.UI.csproj
@@ -118,8 +118,8 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WPFFolderBrowser, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\WPFFolderBrowser.dll</HintPath>
+      <HintPath>..\packages\WPFFolderBrowser.1.0.2\lib\WPFFolderBrowser.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -171,7 +171,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lib\WPFFolderBrowser.dll" />
     <Resource Include="pwc.ico" />
   </ItemGroup>
   <ItemGroup>
