--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/packages.config
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/packages.config
@@ -4,4 +4,5 @@
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="WPFFolderBrowser" version="1.0.2" targetFramework="net45" />
 </packages>
