Added build events

--- a/C#/Project/Amplexor.PWC.Tools.LOEDM.UI/Amplexor.PWC.Tools.LOEDM.UI/Amplexor.PWC.Tools.LOEDM.UI.csproj
+++ b/C#/Project/Amplexor.PWC.Tools.LOEDM.UI/Amplexor.PWC.Tools.LOEDM.UI/Amplexor.PWC.Tools.LOEDM.UI.csproj
@@ -139,6 +139,15 @@
     <Resource Include="pwc.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /y "$(TargetDir)Amplexor.PWC*.dll" "$(TargetDir)lib\"
+del Amplexor.PWC**.dll
+xcopy /y "$(TargetDir)*.dll" "$(TargetDir)lib\net\"
+del *.dll
+
+del *.pdb
+del *.xml</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
